# rosplane

./: .astylerc  CMakeLists.txt  README.md  fix_code_style.sh  package.xml
cfg/: Controller.cfg  Follower.cfg  Manager.cfg
include/: controller_base.h  controller_example.h  controller_tecs.h  estimator_base.h  estimator_example.h  path_follower.h  path_follower_base.h  path_manager.h  path_manager_base.h  path_manager_example.h
launch/: fly.launch
msg/: Attitude_Commands.msg  Controller_Internals.msg  State.msg  Waypoint.msg
param/: aerosonde.yaml
rosplane/: CMakeLists.txt  package.xml
rosplane-tuning_mode/rosplane/cfg/: Controller.cfg
rosplane-tuning_mode/rosplane/include/: controller_base.h  estimator_base.h  estimator_example.h  path_follower_base.h
rosplane-tuning_mode/rosplane/src/: controller_base.cpp  controller_example.cpp  estimator_base.cpp  path_follower_base.cpp  path_follower_example.cpp
rosplane-tuning_mode/rosplane_msgs/: CMakeLists.txt
rosplane-tuning_mode/rosplane_msgs/msg/: Current_Path.msg  State.msg  Waypoint.msg
rosplane-tuning_mode/rosplane_sim/: package.xml
rosplane-tuning_mode/rosplane_sim/launch/: rosflight_sil.launch  spawn_mav.launch
rosplane-tuning_mode/rosplane_sim/params/: fixedwing.yaml
rosplane-tuning_mode/rosplane_sim/xacro/: aircraft_forces_and_moments.xacro  aircraft_truth.xacro  fixedwing.xacro
rosplane-tuning_mode/rosplane_sim/xacro/meshes/: fixedwing.dae
rosplane-tuning_mode/rosplane_utils/src/: tune_pitch.py
rosplane/cfg/: Controller.cfg  Follower.cfg
rosplane/include/: bomb.h  controller_base.h  controller_example.h  estimator_base.h  estimator_example.h  mission_manager_base.h  mission_manager_example.h  ned_t.h  odroid_gpio.h  path_follower_base.h  path_follower_example.h  path_manager_base.h  path_manager_example.h
rosplane/launch/: Official.launch  config.launch  in_flight.launch  mockCompetition.launch  no_path_manager.launch  static_attitude_test.launch  with_path_planner.launch
rosplane/param/: MTD.yaml  bixler.yaml  fixedwing.yaml
rosplane/src/: bomb.cpp  controller_base.cpp  controller_example.cpp  estimator_base.cpp  estimator_example.cpp  failsafe.py  mission_manager_base.cpp  mission_manager_example.cpp  odroid_gpio.cpp  path_follower_base.cpp  path_follower_example.cpp  path_manager_base.cpp  path_manager_example.cpp  path_planner.cpp  plotter.py  position_plotter.py
rosplane_msgs/: CMakeLists.txt  package.xml
rosplane_msgs/msg/: Controller_Commands.msg  Current_Path.msg  State.msg  State_Lite.msg  Waypoint.msg
rosplane_msgs/srv/: NewWaypoints.srv
rosplane_sim/: CMakeLists.txt  package.xml
rosplane_sim/agents/default_fixedwing/: default_fixedwing.xacro  default_fixedwing.yaml
rosplane_sim/agents/default_fixedwing/meshes/: default_fixedwing.dae
rosplane_sim/agents/myTwinDream/: myTwinDream.xacro  myTwinDream.yaml
rosplane_sim/include/rosplane_sim/: aircraft_forces_and_moments.h  aircraft_truth.h  chi_h_va_model.h  common.h  design_model.h  gazebo_compat.h  gz_compat.h  mav_dynamics.h  rosplane_dm.h  simple_dynamics.h
rosplane_sim/launch/: fixedwing.launch  fixedwing_trey.launch  rosflight_sil.launch  spawn_mav.launch
rosplane_sim/params/: fixedwing.yaml
rosplane_sim/src/: aircraft_forces_and_moments.cpp  aircraft_truth.cpp  chi_h_va_model.cpp  mav_dynamics.cpp  rosplane_dm.cpp  simple_dynamics.cpp
rosplane_sim/worlds/: basic.world  fixed_wing.world
rosplane_sim/xacro/: aircraft_forces_and_moments.xacro  aircraft_truth.xacro  default_fixedwing.xacro  default_fixedwing_dm.xacro  design_model.xacro  fixedwing.xacro  fixedwing_sil.xacro  wheel.xacro
rosplane_utils/: CMakeLists.txt  package.xml
rosplane_utils/launch/: telemetry.launch
rosplane_utils/src/: controller_plots.py  estimator_plots.py  rosplane_telemetry.py  tune_course.py  tune_roll.py
src/: controller_base.cpp  controller_example.cpp  controller_tecs.cpp  estimator_base.cpp  estimator_example.cpp  path_follower.cpp  path_follower_base.cpp  path_manager.cpp  path_manager_base.cpp  path_manager_example.cpp  path_manager_main.cpp  path_planner.cpp
