<?xml version="1.0"?>
<package>
  <name>rosplane_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for the ROSplane package</description>

  <maintainer email="gary.ellingson@byu.edu">Gary Ellingson</maintainer>

  <author email="gary.ellingson@byu.edu">Gary Ellingson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>

  </export>
</package>
