<?xml version="1.0"?>
<package format="2">
  <name>rosplane_sim</name>
  <version>0.1.3</version>
  <description>Simulator tools for the ROSplane package</description>

  <maintainer email="gary.ellingson@byu.edu">Gary Ellingson</maintainer>

  <author>Gary Ellingson</author>
  <author>James Jackson</author>
  <author>Craig	Bidstrup</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosplane_msgs</depend>

  <depend>eigen</depend>
  <depend>gazebo</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
