<?xml version="1.0"?>
<package format="2">
  <name>rosplane_utils</name>
  <version>0.1.3</version>
  <description>Supporting utilities for ROSplane packages</description>

  <maintainer email="gary.ellingson@byu.edu">Gary Ellingson</maintainer>

  <author>Gary Ellingson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosplane_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
